# soak

./: .gitignore  CLAUDE.md  README.md  TODO.md  build.sh  plans.md  pyproject.toml
data/: ~$8PaM.docx
data/cfs/: README.txt  aGKbypa8fhI.txt  aTvSX_toNL4.txt  as7I55hY29k.txt  bRidO1PiZJs.txt
docs/: index.md
docs/explanation/: quote-verification-approach.md  what-is-soak.md
docs/how-to/: adapting-pipelines.md  pre-extract-workflow.md  thematic-analysis.md
docs/reference/: cli.md  node-reference.md  quote-verification.md
docs/samples/: cfs-simple-1.json  cfs-simple-1_simple.html  cfs-simple-2.json  cfs-simple-2_pipeline.html  cfs-simple.html  cfs1_simple.html  cfs2.json  cfs2_pipeline.html  cfs2_simple.html  comparison.html  make-samples.sh
docs/samples/classifier/: classifier.yaml
docs/tutorials/: customizing-analysis.md  getting-started.md  working-with-results.md
soak/: agreement.py  agreement_scripts.py  classifier-node-wip.py  cli.py  document_utils.py  export_utils.py  helpers.py  models.py  pipeline_utils.py  specs.py  template_validator.py  visualization.py
soak/comparators/: base.py  similarity_comparator.py
soak/data/cfs/: aOUUTEeIiS0.txt  aS8CQtc9DmA.txt  acWL9FBKr3o.txt  ba2LcetNybI.txt
soak/models/: __init__.py  base.py  dag.py  pipeline.py
soak/models/nodes/: __init__.py  base.py  batch.py  classifier.py  filter.py  map.py  reduce.py  transform.py  transform_reduce.py  verify.py
soak/pipelines/: classifier.yaml  classifier_example.yaml  demo.yaml  test.yaml  verify.yaml  zs.yaml  zspe.yaml
soak/templates/: comparison.html  default.html  llm_as_judge.md  narrative.html  pipeline.html  qualitative_analysis.html  short.html  simple.html
soak/templates/nodes/: batch.html  classifier.html  default.html  filter.html  map.html  reduce.html  split.html  transform.html  transformreduce.html  verifyquotes.html
tests/: README.md  __init__.py  conftest.py  gwet_test.csv  irrtest.csv  test_agreement.py  test_gwet.R  test_nodes.py
tests/pipelines/: test_batch.yaml  test_classifier.yaml  test_filter.yaml  test_map.yaml  test_reduce.yaml  test_split.yaml  test_transform.yaml  test_verify_quotes.yaml
