[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soak-llm"
version = "0.3.1"
description = "Soak: graph-based pipelines for LLM-assisted qualitative text analysis"
authors = [
  { name = "Ben Whalley", email = "ben.whalley@plymouth.ac.uk" }
]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "instructor>=1.10.0",
    "jinja2>=3.1.6",
    "lark>=1.2.2",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "python-box>=7.3.2",
    "python-decouple>=3.8",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "scikit-learn>=1.7.1",
    "scipy>=1.14",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "typer>=0.16.0",
    "umap-learn>=0.5.9.post2",
    "asyncpg>=0.30.0",
    "more-itertools>=10.7.0",
    "jinja-markdown>=1.210911",
    "struckdown",
    "trogon>=0.6.0",
    "nltk>=3.9.2",
    "rank-bm25>=0.2.2",
    "openpyxl>=3.1.0",
    "statsmodels>=0.14.0",
    "krippendorff>=0.6.0",
    "pyirr>=0.84.1.2",
    "setuptools>=80.9.0",
    "irrcac",
    "pysbd>=0.3.4",
]

[tool.setuptools.package-data]
soak = ["templates/*.html", "templates/*.md", "pipelines/*.yaml", "data/**/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["soak*",]



[project.scripts]
soak = "soak.cli:app"

[tool.uv]
package = true
exclude-packages = ["coverage"]

[tool.uv.sources]
# Production defaults (git)
# struckdown = { git = "https://github.com/benwhalley/struckdown", rev = "HEAD" }
struckdown = { path = "../struckdown", editable = true }
irrcac = { git = "https://github.com/benwhalley/irrCAC.git" }

[tool.pytest.ini_options]
pythonpath = ["."]


